# ConeForestSeaBattle

./: CMakeLists.txt  readme.md
cpp/: AI.cpp  Battle.cpp  Keyboard.cpp  Player.cpp  Ship.cpp  UI.cpp  main.cpp
model/: AI.h  Battle.h  Keyboard.h  Player.h  Ship.h  UI.h
